<resources>
    <string name="app_name">SOLFEDŽO ÕPITARKVARA</string>

    <string name="action_settings">SEADED</string>
    <string name="title_activity_learn_notes_main">ÕPI NOOTE</string>
    <string name="title_activity_seaded">SEADED</string>
    <string name="btn_learn_notes">ÕPI NOOTE</string>
    <string name="btn_learn_rythms">ÕPI RÜTME</string>
    <string name="longAppName">SOLFEDŽO ÕPITARKVARA \n 1. KLASSILE</string>

    <string name="title_activity_setting">SEADED</string>
    <string name="MainSettings">VALI SOBIVAD NOODINIMETUSED</string>
    <string name="c_d_e_f_g_a_h">C, D, E, F, G, A, H</string>
    <string name="c_d_e_f_g_a_b">C, D, E, F, G, A, B</string>
    <string name="do_re_mi_fa_sol_la_si">DO, RE, MI, FA, SOL, LA, SI</string>

    <string name="title_activity_learn_notes_by_picture" />
    <string name="NotesByPictureQuestion">MIS NOOT ON PILDIL?</string>

    <string name="title_activity_settings_notes_by_picture" />
    <string name="choose_keys">VALI NOODIVÕTI:</string>
    <string name="viiuliv_ti">VIIULIVÕTI</string>
    <string name="bassiv_ti">BASSIVÕTI</string>

    <string name="title_activity_learn_notes_by_listening" />
    <string name="NotesByListeningQuestion">ARVA ÄRA, MIS NOOT KÕLAB?</string>
    <string name="next_btn">JÄRGMINE</string>

    <string name="title_activity_settings_notes" />
    <string name="choose_octav_settings">VALI OKTAV:</string>
    <string name="esimene_oktav">ESIMENE OKTAV</string>
    <string name="teine_oktav">TEINE OKTAV</string>
    <string name="v_ike_oktav">VÄIKE OKTAV</string>

    <string name="title_activity_recognize_note_by_sound" />
    <string name="klaveri_noodituvastus">KLAVERI NOODITUVASTUS</string>
    <string name="start_recording_piano">START</string>
    <string name="stop_recording_piano">STOP</string>
    <string name="play_recording_piano">PLAY</string>

    <string name="title_activity_learn_notes_theory" />

    <string name="title_activity_learn_notes_tests" />
    <string name="title_activity_test__learn_notes" />
    <string name="title_activity_learn_notes_tests2">TEST</string>
    <string name="title_activity_learn_notes_tests3">TEST</string>
    <string name="NotesTestsTask">TESTI ENDA TEADMISI</string>
    <string name="btn_start_text">ALUSTA</string>
    <string name="best_result_text">PARIM TULEMUS:</string>
    <string name="btn_next_tests">JÄRGMINE</string>
    <string name="best_result">PARIM TULEMUS:</string>
    <string name="start_again">ALUSTA UUESTI</string>

    <string name="title_activity_learn_rythms_activuty">ÕPI RÜTME</string>
    <string name="title_activity_learn_rythms">ÕPI RÜTME</string>

    <string name="title_activity_learn_rythms_by_picture">ÕPI RÜTME</string>
    <string name="RythmsByPictureQuestion">MIS RÜTM ON PILDIL?</string>
    <string name="ta">TA</string>
    <string name="ta_a">TA-A</string>
    <string name="ta_a_a">TA-A-A</string>
    <string name="ta_a_a_a">TA-A-A-A</string>
    <string name="ti_ti">TI-TI</string>
    <string name="tiri_tiri">TIRI-TIRI</string>
    <string name="ti_tiri">TI-TIRI</string>
    <string name="tiri_ti">TIRI-TI</string>
    <string name="tai_ri">TAI-RI</string>
    <string name="ta_i_ti">TA-I-TI</string>
    <string name="btn_next">JÄRGMINE</string>

    <string name="title_activity_learn_rythms_by_listening">ÕPI RÜTME</string>
    <string name="LearnNotesByListeningQuestion">ARVA ÄRA, MIS RÜTMIGA ON TEGEMIST?</string>

    <string name="title_activity_learn_rythms_tests">ÕPI RÜTME</string>
    <string name="title_activity_learn_rythms_tests2">TEST</string>
    <string name="title_activity_learn_rythms_tests3">TEST</string>
    <string name="test_knowledge">TESTI ENDA TEADMISI</string>
    <string name="start">ALUSTA</string>

    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="a">A</string>
    <string name="h">H</string>

    <string name="title_activity_learn_rythms_theory"/>

</resources>
