<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.example.kristiina.solfedzosoftware.SettingActivity"
tools:showIn="@layout/activity_setting"
android:orientation="vertical"
android:weightSum="4">

<TextView
    android:id="@+id/textView9"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/MainSettings" />

<RadioGroup
    android:id="@+id/settingsRadioGroup"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2">

    <RadioButton
        android:id="@+id/CDEH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/c_d_e_f_g_a_h" />

    <RadioButton
        android:id="@+id/CDEB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:text="@string/c_d_e_f_g_a_b" />

    <RadioButton
        android:id="@+id/doReMi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:text="@string/do_re_mi_fa_sol_la_si" />

</RadioGroup>

<TextView
    android:id="@+id/textView10"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1" />

</LinearLayout>
