<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kristiina.solfedzosoftware.LearnNotesRecognizerActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/klaveri_noodituvastus" />

    <Button
        android:id="@+id/recordBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/custom_button_start"
        android:onClick="onClick_start"
        android:text="@string/start_recording_piano"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/custom_button_stop"
        android:onClick="onClick_stop"
        android:text="@string/stop_recording_piano"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/custom_button_play"
        android:onClick="onClick_play"
        android:text="@string/play_recording_piano"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/answerTW"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" />
</LinearLayout>