<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kristiina.solfedzosoftware.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:weightSum="4"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/gray"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/longAppName"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_learn_notes"
            android:gravity="center"
            android:onClick="onClick_OpiNoote"
            android:text="@string/btn_learn_notes"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_learn_rythms"
            android:gravity="center"
            android:onClick="onClick_LearnRythms"
            android:text="@string/btn_learn_rythms"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>




